# Real_Time_Bank_Fraud_Detection_System

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  ACTION_ITEMS.md  BAF.ipynb  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS.md  PROGRESS.md  PROJECT_SUMMARY.md  README.md  README_NEW.md  USAGE.md  app.py  circuit_breaker.py  cli.py  compose.yaml  config.py  dashboard.py  db.py  docker-compose.prod.yml  evaluate.py  example_data_generator.py  example_transaction_generator.py  exceptions.py  explore.ipynb  inference.py  logger.py  metrics.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  start.sh  train.py  train_advanced.py  train_adversarial.py  train_ensemble.py  (+2 more)
.github/workflows/: ci-cd.yml  model-training.yml  monitoring.yml
data/: .gitignore
data_generator/: __init__.py  config.py  data_generator.py  state_manager.py  transaction_factory.py  user_pool.py
docs/: ADVERSARIAL_TRAINING.md  API_DOCUMENTATION.md  ARCHITECTURE.md  DEPLOYMENT.md
infrastructure/docker/: Dockerfile
scripts/: benchmark.py  init_db.py  init_db.sql  run_tests.py
src/: __init__.py
src/adversarial/: __init__.py  agent.py
src/api/: security.py
src/data/: __init__.py  loader.py
src/features/: __init__.py  engineering.py  feature_store.py  schemas.py
src/models/: __init__.py  ab_testing.py  auto_retrain.py  batch_inference.py  enhanced_fraud_detector.py  ensemble.py  model_registry.py  validation.py
src/monitoring/: __init__.py  drift_detector.py  enhanced_monitor.py  explainability_dashboard.py  model_monitor.py
src/utils/: circuit_breaker.py  validation.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/load/: locustfile.py
tests/unit/: test_advanced_metrics.py  test_adversarial.py  test_api.py  test_enhanced_fraud_detector.py  test_feature_engineering.py  test_gnn.py  test_model_monitor.py  test_trainer.py  test_transformer.py
transaction_generator/: __init__.py  config.py  fraud_simulator.py  kafka_client.py  user_sampler.py
transaction_generator/fraud_patterns/: __init__.py  account_takeover.py  base.py  burst_fraud.py  (+1 more)
